Добавлен принцип функциональности

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -60,7 +60,7 @@
     Сергеев Г.Г., Скатков А.В., Мащенко Е.Н.
     Методические указания <<Процедура системного анализа при проектировании программных систем>>
     для студентов-дипломников дневной и заочной формы обучения специальности 7.091501 /
-    Сост. Сергеев Г.Г., Скатков А.В., Мащенко Е.Н. -- Севастополь:
+    Сост.: Сергеев Г.Г., Скатков А.В., Мащенко Е.Н. -- Севастополь:
     Изд-во СевНТУ, 2005. -- 32с.
 
 % то что использовал пока
