--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -10,7 +10,7 @@
 
 Системный анализ выполнен в соответствии с \cite{sys-analyz}.
 
-\subsection{Принцип конечной цели}
+\subsection{Принцип конечной цели} \label{goal}
 
 Принцип конечной цели --- это абсолютный приоритет конечной цели, он имеет несколько правил:
 \begin{itemize}
@@ -20,7 +20,7 @@
   \item Цель функционирования искусственной системы задается, как правило, системой, в которой исследуемая система является составной частью.
 \end{itemize}
 
-При использовании данного принципа, разрабатываемая виртуальная инфраструктура будет рассматриваться в виде <<черного ящика>>, функционирование которого описывается формулой \ref{blackbox-eq}.
+При использовании данного принципа, разрабатываемая виртуальная инфраструктура будет рассматриваться в виде <<черного ящика>>, функционирование которого описывается формулой (\ref{blackbox-eq}):
 \begin{equation} \label{blackbox-eq}
 \text{Y=F(X, Z)}
 \end{equation}
@@ -109,5 +109,48 @@
 
 Излишняя детализация не требуется, поэтому остальные системы на модули принято решение не разбивать.
 
+\subsection{Принцип функциональности}
+
+Принцип утверждает, что любая структура тесно связана с функцией системы и ее частей.
+В случае придания системе новых функций полезно пересматривать ее структуру, а не пытаться втиснуть новую функцию в старую схему.
+Поскольку выполняемые функции составляют процессы, то целесообразно рассматривать отдельно процессы, функции, структуры.
+В свою очередь, процессы сводятся к анализу потоков различных видов:
+\begin{itemize}
+  \item Материальный поток;
+  \item Поток энергии;
+  \item Поток информации;
+  \item Смена состояний.
+\end{itemize}
+
+С этой точки зрения структура есть множество ограничений на потоки в пространстве и времени.
+
+Функции подсистем приведены в п. \ref{goal}.
+
+Матрица инциденций функций системы и функций назначения подсистем приведена в табл. \ref{inc-matrix}.
+\begin{table}[H]
+  \caption{Матрица инциденций}\label{inc-matrix}
+  \begin{tabular}{|c|c|c|c|c|c|}
+  \hline \multirow{2}{*}{Функции} & \multicolumn{4}{|c|}{Подсистемы} & \multirow{2}{*}{Виртуальная инфраструктура} \\
+  \cline{2-5} & 1 & 2 & 3 & 4 & \\
+  \hline Ф1 & + & & & & + \\
+  \hline Ф2 & + & & & & + \\
+  \hline Ф3 & & + & & & + \\
+  \hline Ф4 & & + & & & + \\
+  \hline Ф5 & & & + & + & + \\
+  \hline 
+  \end{tabular}
+\end{table}
+
+В матрице инциденций знаком <<+>> обозначены функции, которые реализуются для каждой из подсистем.
+
+Детализация функций подсистемы на примере подсистемы взаимодействия с пользователем:
+\begin{enumerate}
+  \item Регистрация и авторизация пользователя в платежной системе;
+  \item Обеспечение перечня услуг;
+  \item Обеспечение возможных способов оплаты услуг;
+  \item Возможность уточнения или изменения услуги.
+\end{enumerate}
+
+Входными данными для подсистемы является информация о пользователе, а выходными --- подтвержденный заказ услуг.
 
 \clearpage
