--- a/inc/test.tex
+++ b/inc/test.tex
@@ -43,7 +43,7 @@ class Main {
 Конец страницы.
 
 Вот пример картинки.
-\addimghere{test.png}{0.7}{Картинка}
+\addimghere{test.png}{0.7}{Картинка}{dsds}
 
 Табличко (использовать только в нумерованных секциях):
 \begin{table}[H] % Таблица
