Добавлен принцип иерархии

--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -153,4 +153,11 @@
 
 Входными данными для подсистемы является информация о пользователе, а выходными --- подтвержденный заказ услуг.
 
+\subsection{Принцип иерархии}
+
+Полезно введение иерархии частей и их ранжирование, что упрощает разработку системы и устанавливает порядок рассмотрения частей.
+
+Выполнение принципа иерархичности для разрабатываемой системы на примере подсистемы защиты и обеспечения целостности данных проиллюстрировано на рис. \ref{hierarchy-princ}.
+\addimghere{hierarchy-princ}{1}{Принцип иерархии на примере подсистемы защиты и обеспечения целостности данных}{hierarchy-princ}
+
 \clearpage
