Добавлен принцип централизации/децентрализации

--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -160,4 +160,27 @@
 Выполнение принципа иерархичности для разрабатываемой системы на примере подсистемы защиты и обеспечения целостности данных проиллюстрировано на рис. \ref{hierarchy-princ}.
 \addimghere{hierarchy-princ}{1}{Принцип иерархии на примере подсистемы защиты и обеспечения целостности данных}{hierarchy-princ}
 
+\subsection{Принцип сочетания централизации и децентрализации}
+
+Степень централизации должна быть минимальной, обеспечивающей выполнение поставленной цели.
+Соотношение централизации и децентрализации определяется уровнями, на которых вырабатываются и принимаются управленческие решения.
+
+Недостаток децентрализованного управления --- увеличение времени адаптации системы.
+Он существенно влияет на функционирование системы в быстро меняющихся средах.
+То, что в централизованных системах можно сделать за короткое время, в децентрализованной системе будет осуществляться весьма медленно.
+Данный недостаток нивелируется налаживанием горизонтальных связей.
+
+Недостатком централизованного управления является сложность управления из-за огромного потока информации, подлежащей переработке в старшей системе управления.
+Поэтому в сложной системе обычно присутствуют два уровня управления.
+В медленно меняющейся обстановке децентрализованная часть системы успешно справляется с адаптацией поведения системы к среде и с достижением глобальной цели системы за счет оперативного управления, а при резких изменениях среды осуществляется централизованное управление по переводу системы в новое состояние.
+
+Например, можно выполнить декомпозицию подсистемы взаимодействия с пользователем таким образом:
+\begin{enumerate}
+  \item \{Подсистема работы с клиентом\};
+  \item \{Подсистема работы клиентам с услугой\};
+  \item \{Подсистема учета финансов\}.
+\end{enumerate}
+
+Такое разбиение позволит реализовать полученные подмножества в виде отдельных модулей.
+
 \clearpage
