Добавлен принцип развития

--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -183,4 +183,31 @@
 
 Такое разбиение позволит реализовать полученные подмножества в виде отдельных модулей.
 
+\subsection{Принцип развития}
+
+Учет изменяемости системы, ее способности к развитию, адаптации, расширению, замене частей, накапливанию информации.
+В основу синтезируемой системы требуется закладывать возможность развития, наращивания усовершенствования.
+Обычно расширение функций предусматривается за счет обеспечения возможности включения новых модулей, совместимых с уже имеющимися.
+С другой стороны, при анализе принцип развития ориентирует на необходимость учета предыстории развития системы и тенденций, имеющихся в настоящее время, для вскрытия закономерностей ее функционирования.
+
+Одним из способов учета этого принципа разработчиками является рассмотрение системы относительно ее жизненного цикла.
+Условными фазами жизненного цикла являются: проектирование, изготовление, ввод в эксплуатацию, эксплуатация, наращивание возможностей (модернизация), вывод из эксплуатации (замена), уничтожение.
+
+Отдельные авторы этот принцип называют принципом изменения (историчности) или открытости.
+Для того чтобы система функционировала, она должна изменяться, взаимодействовать со средой.
+
+Проектируемая система может быть развита следующим образом:
+\begin{itemize}
+  \item Добавлением модуля конвертации валюты для оплаты услуги;
+  \item Расширением перечня услуг;
+  \item Внедрением дополнительных технологий виртуализации;
+  \item Увеличением штата технической поддержки;
+  \item Введением расширенного мониторинга;
+  \item Многоуровневой защитой от атак на отказ;
+  \item Расширением памяти на системах хранения данных;
+  \item Многоуровневой репликацией и резервным копированием.
+\end{itemize}
+
+
+
 \clearpage
