Добавлен принцип учета случайностей

--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -26,8 +26,8 @@
 \end{equation}
 где Y --- выходной вектор системы, который функционально зависит от входного вектора X и вектора внутреннего состояния системы Z (рис. \ref{blackbox-pic}).
 Входными данными (вектор X) будут являться запросы пользователей на обработку инцидентов и запросов на обслуживание.
-Внутреннее состояние системы (вектор Z) представляет собой создание услуг по требованию клиента.
-Выходными данными (вектор Y) будут являться предоставление доступа к услугам клиентам.
+Внутреннее состояние системы (вектор Z) представляет собой создание услуг по требованию пользователя.
+Выходными данными (вектор Y) будут являться предоставление доступа к услугам пользователя.
 \addimghere{blackbox}{0.6}{Проектируемая система в виде черного ящика}{blackbox-pic}
 
 В соответствии с данным принципом должна быть четко сформулирована конечная цель --- назначение проектируемой системы и сформирован список функций, которые должна выполнять система.
@@ -176,9 +176,9 @@
 
 Например, можно выполнить декомпозицию подсистемы взаимодействия с пользователем таким образом:
 \begin{enumerate}
-  \item \{Подсистема работы с клиентом\};
-  \item \{Подсистема работы клиентам с услугой\};
-  \item \{Подсистема учета финансов\}.
+  \item \{Подсистема работы с пользователями\};
+  \item \{Подсистема работы пользователей с услугами\};
+  \item \{Подсистема учета финансовых средств\}.
 \end{enumerate}
 
 Такое разбиение позволит реализовать полученные подмножества в виде отдельных модулей.
@@ -207,6 +207,27 @@
   \item Расширением памяти на системах хранения данных;
   \item Многоуровневой репликацией и резервным копированием.
 \end{itemize}
+
+\subsection{Принцип учета случайностей}
+
+Принцип утверждает, что можно иметь дело с системой, в которой структура, функционирование или внешние воздействия не полностью определены.
+
+Сложные системы не всегда подчиняются вероятностным законам.
+В таких системах можно оценивать <<наихудшие ситуации>> и рассмотрение проводить для них.
+Этот способ обычно называют методом гарантируемого результата.
+Он применим, когда неопределенность не описывается аппаратом теории вероятностей.
+
+При наличии информации о вероятностных характеристиках случайностей можно определять вероятностные характеристики выходов в системе.
+
+События и действия, некорректные с точки зрения правил функционирования системы:
+\begin{itemize}
+  \item Попытка заказа услуги пользователем без наличия финансовых средств на счету;
+  \item Неподтвержденные заказы услуг;
+  \item Отсутствие своевременной работы технической поддержки;
+  \item Ошибки и уязвимости в используемых программных платформах.
+\end{itemize}
+
+Кроме того, необходимо вести контроль успешности и целостности проведения операций с компонентами системы, данными пользователей и корректно обрабатывать исключения, возникновение которых возможно в процессе работы системы.
 
 
 
