Окончен раздел системного анализа

--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -229,6 +229,9 @@
 
 Кроме того, необходимо вести контроль успешности и целостности проведения операций с компонентами системы, данными пользователей и корректно обрабатывать исключения, возникновение которых возможно в процессе работы системы.
 
-
+Перечисленные принципы обладают высокой степенью общности.
+Для непосредственного применения исследователь должен наполнить их конкретным содержанием применительно к предмету исследования.
+Такая интерпретация может привести к обоснованному выводу о незначимости какого-либо принципа.
+Однако знание и учет принципов позволяют лучше увидеть существенные стороны решаемой проблемы, учесть весь комплекс взаимосвязей, обеспечить системную интеграцию.
 
 \clearpage
