Добавил теорию по виртуальной инфраструктуре

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -63,6 +63,12 @@
     Сост.: Сергеев Г.Г., Скатков А.В., Мащенко Е.Н. -- Севастополь:
     Изд-во СевНТУ, 2005. -- 32с.
 
+\bibitem{virt-infrast}
+    Основы виртуализации. Инфраструктура
+    [Электронный ресурс]. --
+    Электрон. текстовые данные (32477 bytes) -- 
+    Режим доступа: http://www.bw-it.ru/virtualization\_virtual\_infrastructure.php
+
 % то что использовал пока
 
 \bibitem{antonova-zaika} Лукъянчук А.Г., Антонова Г.З., Заика Е.В. 
