--- a/inc/4-description.tex
+++ b/inc/4-description.tex
@@ -1,5 +1,6 @@
 \section{Описание виртуальной инфраструктуры}
 
+\iffalse 
 Пункты:?
 \begin{itemize}
   \item Назначение
@@ -42,5 +43,47 @@ ISPsystem и его продукция,
 миграция контейнеров и серверов,
 отказоустойчивость,
 расширение инфраструктуры
+\fi 
+
+Виртуальная инфраструктура --- это частное облако, размещаемое на оборудовании провайдера.
+По сути, виртуальная инфраструктура представляет собой динамическое распределение ресурсов в соответствии предприятия.
+Виртуальная машина использует материальные ресурсы одного компьютера, а виртуальная инфраструктура --- материальные ресурсы всей ИТ-среды, формируя из компьютеров, а также из подключенных к ним сетей и хранилищ единый пул ИТ-ресурсов.
+
+Виртуальная инфраструктура включает в себя следующие компоненты \cite{virt-infrast}:
+\begin{itemize}
+  \item Гипервизоры для одного узла для полной виртуализации каждого компьютера;
+  \item Пакет услуг инфраструктуры распределенных систем на основе виртуализации (например, управление ресурсами) для оптимального распределения доступных ресурсов между виртуальными машинами;
+  \item Решения для автоматизации, обеспечивающие особые возможности оптимизации того или иного ИТ-процесса (например инициализации или восстановления в критических ситуациях).
+\end{itemize}
+
+Благодаря отделению всей программной среды от исходной аппаратной инфраструктуры виртуализация позволяет объединить ряд серверов, инфраструктур хранения и сетей в единый пул ресурсов, динамически, безопасно и надежно распределяемый между приложениями по мере необходимости.
+С помощью этого инновационного решения организации могут создать вычислительную инфраструктуру с максимальной эффективностью, доступностью, автоматизацией и гибкостью, состоящую из недорогих серверов, соответствующих отраслевому стандарту.
+
+Предпочтение виртуальной инфраструктуре отдают по причинам:
+\begin{itemize}
+  \item Экономии на обслуживающем персонале при условии сохранения 100\% отказоустойчивости системы;
+  \item Отсутствии необходимости выделять бюджет на модернизацию оборудования;
+  \item Возможности объединения в общую виртуальную среду офисы, географически находящиеся в разных местах;
+  \item Возможности быстрого масштабирования проекта в соответствии с текущими решаемыми задачами;
+  \item Быстрого доступа к данным.
+\end{itemize}
+
+Под каждый тарифный план создается изолированное частное облако с фиксированным количеством выделенных ресурсов.
+Выделенное в рамках тарифного плана частное облако становится гибкой виртуальной оболочкой.
+Функционирующие внутри нее виртуальные машины могут объединяться в виртуальные сети.
+Изменение их вычислительной мощности происходит в зависимости от решаемых задач.
+Смена или трансформация тарифных планов производится в режиме реального времени без перебоев в работе.
+
+В случае необходимости, пользователь имеет возможность создавать нужное количество сегментов сети, добиваясь удобной конфигурации виртуальной рабочей среды.
+
+Управление ресурсами осуществляется через удобный для пользователя веб-интерфейс, что позволяет делать все необходимые операции, такие как:
+\begin{itemize}
+  \item Создание арендуемых виртуальных серверов самостоятельно;
+  \item Изменение конфигурации за несколько минут, часть операций даже без остановки и перезагрузки сервера (для некоторых операционных систем);
+  \item Включение, выключение, установка, переустановка ОС и приложений самостоятельно и удаленно;
+  \item Осуществление резервного копирование и сохранение состояний работающих виртуальных машин. 
+\end{itemize}
+
+\subsection{Назначение виртуальной инфраструктуры}
 
 \clearpage
