Правки от научрука

--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -5,7 +5,7 @@
 Совокупность элементов и связей между ними позволяет судить о структуре системы.
 
 Принципы системного анализа --- это некоторые положения общего характера, являющиеся обобщением опыта работы человека со сложными системами.
-Общепринятых формулировок на настоящее время нет, но не все формулировки так или иначе описывают одни и те же понятия.
+Общепринятых формулировок в настоящее время нет, но все формулировки так или иначе описывают одни и те же понятия.
 Пренебрежение принципами при проектировании любой нетривиальной технической системы, непременно приводит к потерям того или иного характера, от увеличения затрат в процессе проектирования до снижения качества и эффективности конечного продукта.
 
 Системный анализ выполнен в соответствии с \cite{sys-analyz}.
@@ -14,8 +14,8 @@
 
 Принцип конечной цели --- это абсолютный приоритет конечной цели, он имеет несколько правил:
 \begin{itemize}
-  \item Для проведения системного анализа необходимо, в первую очередь, сформировать цель исследования, так как не полностью определенные цели влекут за собой неверные выводы;
-  \item Анализ следует вести на базе уяснения основной цели, что позволит определить ее существенные свойства показателей качества и критериев оценки;
+  \item Для проведения системного анализа необходимо, в первую очередь, сформулировать цель функционирования системы, так как не полностью определенные цели влекут за собой неверные выводы;
+  \item Анализ системы следует вести на базе уяснения основной цели, что позволит определить существенные свойства показателей качества и критериев оценки;
   \item При синтезе систем любая попытка изменения или совершенствования должна оцениваться относительно конечной цели;
   \item Цель функционирования искусственной системы задается, как правило, системой, в которой исследуемая система является составной частью.
 \end{itemize}
@@ -25,7 +25,7 @@
 \text{Y=F(X, Z)}
 \end{equation}
 где Y --- выходной вектор системы, который функционально зависит от входного вектора X и вектора внутреннего состояния системы Z (рис. \ref{blackbox-pic}).
-Входными данными (вектор X) будут являться запросы пользователей на обработку инцидентов и запросов на обслуживание.
+Входными данными (вектор X) будут являться запросы пользователей на обработку и обслуживание.
 Внутреннее состояние системы (вектор Z) представляет собой создание услуг по требованию пользователя.
 Выходными данными (вектор Y) будут являться предоставление доступа к услугам пользователя.
 \addimghere{blackbox}{0.6}{Проектируемая система в виде черного ящика}{blackbox-pic}
@@ -46,7 +46,7 @@
 Перечень входных воздействий на систему:
 \begin{itemize}
   \item Внесение изменений данных о заявке;
-  \item Мониторинг хода решения.
+  \item Мониторинг хода решения заявки.
 \end{itemize}
 
 \subsection{Принцип единства}
