--- a/inc/4-description.tex
+++ b/inc/4-description.tex
@@ -24,6 +24,7 @@ munin,
 репликация DNS,
 шардинг,
 CDN,
+балансировка нагрузки,
 типы репликации DNS и MySQL,
 DDoS и защита от него,
 LVM,
@@ -43,6 +44,10 @@ ISPsystem и его продукция,
 миграция контейнеров и серверов,
 отказоустойчивость,
 расширение инфраструктуры
+
+Ссылки: http://blog.selectel.ru/balansirovka-nagruzki-osnovnye-algoritmy-i-metody/
+
+Рисую в гугл драйве схемы.
 \fi 
 
 Виртуальная инфраструктура --- это частное облако, размещаемое на оборудовании провайдера.
