Отступ от заголовка раздела

--- a/inc/preamble.tex
+++ b/inc/preamble.tex
@@ -149,7 +149,7 @@
 
 % Оформление заголовков
 \usepackage[compact,explicit]{titlesec}
-\titleformat{\section}{}{}{12.5mm}{\centering{\thesection\quad\MakeTextUppercase{#1}}}
+\titleformat{\section}{}{}{12.5mm}{\centering{\thesection\quad\MakeTextUppercase{#1}}\vspace{2em}}
 \titleformat{\subsection}[block]{}{}{12.5mm}{\thesubsection\quad#1}
 \titleformat{\subsubsection}[block]{\normalsize}{}{12.5mm}{\thesubsubsection\quad#1}
 \titleformat{\paragraph}[block]{\normalsize}{}{12.5mm}{\MakeTextUppercase{#1}}
