Пункты в списках с маленькой буквы

--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -4,23 +4,23 @@
 
 Виртуальная инфраструктура должна обладать следующими характеристиками:
 \begin{itemize}
-    \item Использование, по возможности, продуктов, распространяющихся под свободной лицензией (GNU GPL) для организации инфраструктуры;
-    \item Устранение единой точки отказа при проектировании инфраструктуры;
-    \item Защита от распределенных атак на отказ (DDoS);
-    \item Использование инфраструктуры в бизнесе для предоставления облачных услуг клиентам.
+    \item использование, по возможности, продуктов, распространяющихся под свободной лицензией (GNU GPL) для организации инфраструктуры;
+    \item устранение единой точки отказа при проектировании инфраструктуры;
+    \item защита от распределенных атак на отказ (DDoS);
+    \item использование инфраструктуры в бизнесе для предоставления облачных услуг клиентам.
 \end{itemize}
 
 Аппаратное обеспечение должно базироваться в дата-центре ориентированным на требования стандарта Tier III, состоящего из информационной, телекоммуникационной и инженерной инфраструктуры, с возможностью аренды выделенных серверов и аппаратной защиты от DDoS-атак, а также поддержкой аппаратного RAID.
 Рекомендуемые характеристики выделенных серверов виртуализации:
 \begin{itemize}
     \item 2xIntel\textregistered~Xeon E5430 @ 2.66GHz;
-    \item Минимальный объем ОЗУ 32 Гб;
-    \item Минимум 960 Гб места на жестком диске (SSD);
-    \item Поддержка аппаратного RAID;
-    \item Операционная система не ниже Debian 7 GNU/Linux или CentOS 6.5;
-    \item Интернет-канал с пропускной способностью не менее 100 Мб/с;
-    \item Возможность добавления дополнительных IP-адресов к серверам;
-    \item Возможность удаленного доступа к серверам посредством IPMI (Intelligent Platform Management Interface).
+    \item минимальный объем ОЗУ 32 Гб;
+    \item минимум 960 Гб места на жестком диске (SSD);
+    \item поддержка аппаратного RAID;
+    \item операционная система не ниже Debian 7 GNU/Linux или CentOS 6.5;
+    \item интернет-канал с пропускной способностью не менее 100 Мб/с;
+    \item возможность добавления дополнительных IP-адресов к серверам;
+    \item возможность удаленного доступа к серверам посредством IPMI (Intelligent Platform Management Interface).
 \end{itemize}
 
 Следует предусмотреть возможность развертывания дополнительных виртуальных серверов, для организации DNS-серверов, системы мониторинга и платежной системы.
@@ -28,17 +28,17 @@
 
 Для разработки виртуальной инфраструктуры необходимо реализовать следующие этапы:
 \begin{itemize}
-    \item Выбор технологий виртуализации;
-    \item Выбор физических серверов на основе услуги IaaS в ДЦ;
-    \item Приобретение лицензий на программное обеспечение;
-    \item Приобретение подсетей IP-адресов;
-    \item Создание и подключение инфраструктуры мониторинга, платежной системы (биллинга), резервного копирования;
-    \item Реализация аппаратной защиты от DDoS-атак;
-    \item Выбор перечня PaaS-услуг;
-    \item Внедрение перечня предоставляемых PaaS-услуг;
-    \item Создание руководства администратора по виртуализации;
-    \item Создание руководства для клиентов по часто задаваемым вопросам;
-    \item Внедрение инфраструктуры на рынке PaaS-услуг.
+    \item выбор технологий виртуализации;
+    \item выбор физических серверов на основе услуги IaaS в ДЦ;
+    \item приобретение лицензий на программное обеспечение;
+    \item приобретение подсетей IP-адресов;
+    \item создание и подключение инфраструктуры мониторинга, платежной системы (биллинга), резервного копирования;
+    \item реализация аппаратной защиты от DDoS-атак;
+    \item выбор перечня PaaS-услуг;
+    \item внедрение перечня предоставляемых PaaS-услуг;
+    \item создание руководства администратора по виртуализации;
+    \item создание руководства для клиентов по часто задаваемым вопросам;
+    \item внедрение инфраструктуры на рынке PaaS-услуг.
 \end{itemize}
 
 \clearpage
