--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -14,10 +14,10 @@
 
 Принцип конечной цели --- это абсолютный приоритет конечной цели, он имеет несколько правил:
 \begin{itemize}
-  \item Для проведения системного анализа необходимо, в первую очередь, сформулировать цель функционирования системы, так как не полностью определенные цели влекут за собой неверные выводы;
-  \item Анализ системы следует вести на базе уяснения основной цели, что позволит определить существенные свойства показателей качества и критериев оценки;
-  \item При синтезе систем любая попытка изменения или совершенствования должна оцениваться относительно конечной цели;
-  \item Цель функционирования искусственной системы задается, как правило, системой, в которой исследуемая система является составной частью.
+  \item для проведения системного анализа необходимо, в первую очередь, сформулировать цель функционирования системы, так как не полностью определенные цели влекут за собой неверные выводы;
+  \item анализ системы следует вести на базе уяснения основной цели, что позволит определить существенные свойства показателей качества и критериев оценки;
+  \item при синтезе систем любая попытка изменения или совершенствования должна оцениваться относительно конечной цели;
+  \item цель функционирования искусственной системы задается, как правило, системой, в которой исследуемая система является составной частью.
 \end{itemize}
 
 При использовании данного принципа, разрабатываемая виртуальная инфраструктура будет рассматриваться в виде <<черного ящика>>, функционирование которого описывается формулой (\ref{blackbox-eq}):
@@ -45,8 +45,8 @@
 
 Перечень входных воздействий на систему:
 \begin{itemize}
-  \item Внесение изменений данных о заявке;
-  \item Мониторинг хода решения заявки.
+  \item внесение изменений данных о заявке;
+  \item мониторинг хода решения заявки.
 \end{itemize}
 
 \subsection{Принцип единства}
@@ -56,10 +56,10 @@
 
 На основании функций проектируемой системы, представленных выше, в ней можно выделить следующие подсистемы:
 \begin{enumerate}
-  \item Подсистема взаимодействия с пользователем;
-  \item Подсистема управления услугами;
-  \item Подсистема управления инфраструктурой;
-  \item Подсистема защиты и обеспечения целостности данных.
+  \item подсистема взаимодействия с пользователем;
+  \item подсистема управления услугами;
+  \item подсистема управления инфраструктурой;
+  \item подсистема защиты и обеспечения целостности данных.
 \end{enumerate}
 
 На рис. \ref{subsystems} представлена схема взаимодействия между подсистемами.
@@ -116,10 +116,10 @@
 Поскольку выполняемые функции составляют процессы, то целесообразно рассматривать отдельно процессы, функции, структуры.
 В свою очередь, процессы сводятся к анализу потоков различных видов:
 \begin{itemize}
-  \item Материальный поток;
-  \item Поток энергии;
-  \item Поток информации;
-  \item Смена состояний.
+  \item материальный поток;
+  \item поток энергии;
+  \item поток информации;
+  \item смена состояний.
 \end{itemize}
 
 С этой точки зрения структура есть множество ограничений на потоки в пространстве и времени.
@@ -145,10 +145,10 @@
 
 Детализация функций подсистемы на примере подсистемы взаимодействия с пользователем:
 \begin{enumerate}
-  \item Регистрация и авторизация пользователя в платежной системе;
-  \item Обеспечение перечня услуг;
-  \item Обеспечение возможных способов оплаты услуг;
-  \item Возможность уточнения или изменения услуги.
+  \item регистрация и авторизация пользователя в платежной системе;
+  \item обеспечение перечня услуг;
+  \item обеспечение возможных способов оплаты услуг;
+  \item возможность уточнения или изменения услуги.
 \end{enumerate}
 
 Входными данными для подсистемы является информация о пользователе, а выходными --- подтвержденный заказ услуг.
@@ -176,9 +176,9 @@
 
 Например, можно выполнить декомпозицию подсистемы взаимодействия с пользователем таким образом:
 \begin{enumerate}
-  \item \{Подсистема работы с пользователями\};
-  \item \{Подсистема работы пользователей с услугами\};
-  \item \{Подсистема учета финансовых средств\}.
+  \item подсистема работы с пользователями;
+  \item подсистема работы пользователей с услугами;
+  \item подсистема учета финансовых средств.
 \end{enumerate}
 
 Такое разбиение позволит реализовать полученные подмножества в виде отдельных модулей.
@@ -198,14 +198,14 @@
 
 Проектируемая система может быть развита следующим образом:
 \begin{itemize}
-  \item Добавлением модуля конвертации валюты для оплаты услуги;
-  \item Расширением перечня услуг;
-  \item Внедрением дополнительных технологий виртуализации;
-  \item Увеличением штата технической поддержки;
-  \item Введением расширенного мониторинга;
-  \item Многоуровневой защитой от атак на отказ;
-  \item Расширением памяти на системах хранения данных;
-  \item Многоуровневой репликацией и резервным копированием.
+  \item добавлением модуля конвертации валюты для оплаты услуги;
+  \item расширением перечня услуг;
+  \item внедрением дополнительных технологий виртуализации;
+  \item увеличением штата технической поддержки;
+  \item введением расширенного мониторинга;
+  \item многоуровневой защитой от атак на отказ;
+  \item расширением памяти на системах хранения данных;
+  \item многоуровневой репликацией и резервным копированием.
 \end{itemize}
 
 \subsection{Принцип учета случайностей}
@@ -221,10 +221,10 @@
 
 События и действия, некорректные с точки зрения правил функционирования системы:
 \begin{itemize}
-  \item Попытка заказа услуги пользователем без наличия финансовых средств на счету;
-  \item Неподтвержденные заказы услуг;
-  \item Отсутствие своевременной работы технической поддержки;
-  \item Ошибки и уязвимости в используемых программных платформах.
+  \item попытка заказа услуги пользователем без наличия финансовых средств на счету;
+  \item неподтвержденные заказы услуг;
+  \item отсутствие своевременной работы технической поддержки;
+  \item ошибки и уязвимости в используемых программных платформах.
 \end{itemize}
 
 Кроме того, необходимо вести контроль успешности и целостности проведения операций с компонентами системы, данными пользователей и корректно обрабатывать исключения, возникновение которых возможно в процессе работы системы.
