--- a/inc/4-description.tex
+++ b/inc/4-description.tex
@@ -56,9 +56,9 @@ ISPsystem и его продукция,
 
 Виртуальная инфраструктура включает в себя следующие компоненты \cite{virt-infrast}:
 \begin{itemize}
-  \item Гипервизоры для одного узла для полной виртуализации каждого компьютера;
-  \item Пакет услуг инфраструктуры распределенных систем на основе виртуализации (например, управление ресурсами) для оптимального распределения доступных ресурсов между виртуальными машинами;
-  \item Решения для автоматизации, обеспечивающие особые возможности оптимизации того или иного ИТ-процесса (например инициализации или восстановления в критических ситуациях).
+  \item гипервизоры для одного узла для полной виртуализации каждого компьютера;
+  \item пакет услуг инфраструктуры распределенных систем на основе виртуализации (например, управление ресурсами) для оптимального распределения доступных ресурсов между виртуальными машинами;
+  \item решения для автоматизации, обеспечивающие особые возможности оптимизации того или иного ИТ-процесса (например инициализации или восстановления в критических ситуациях).
 \end{itemize}
 
 Благодаря отделению всей программной среды от исходной аппаратной инфраструктуры виртуализация позволяет объединить ряд серверов, инфраструктур хранения и сетей в единый пул ресурсов, динамически, безопасно и надежно распределяемый между приложениями по мере необходимости.
@@ -66,11 +66,11 @@ ISPsystem и его продукция,
 
 Предпочтение виртуальной инфраструктуре отдают по причинам:
 \begin{itemize}
-  \item Экономии на обслуживающем персонале при условии сохранения 100\% отказоустойчивости системы;
-  \item Отсутствии необходимости выделять бюджет на модернизацию оборудования;
-  \item Возможности объединения в общую виртуальную среду офисы, географически находящиеся в разных местах;
-  \item Возможности быстрого масштабирования проекта в соответствии с текущими решаемыми задачами;
-  \item Быстрого доступа к данным.
+  \item экономии на обслуживающем персонале при условии сохранения 100\% отказоустойчивости системы;
+  \item отсутствии необходимости выделять бюджет на модернизацию оборудования;
+  \item возможности объединения в общую виртуальную среду офисы, географически находящиеся в разных местах;
+  \item возможности быстрого масштабирования проекта в соответствии с текущими решаемыми задачами;
+  \item быстрого доступа к данным.
 \end{itemize}
 
 Под каждый тарифный план создается изолированное частное облако с фиксированным количеством выделенных ресурсов.
@@ -83,10 +83,10 @@ ISPsystem и его продукция,
 
 Управление ресурсами осуществляется через удобный для пользователя веб-интерфейс, что позволяет делать все необходимые операции, такие как:
 \begin{itemize}
-  \item Создание арендуемых виртуальных серверов самостоятельно;
-  \item Изменение конфигурации за несколько минут, часть операций даже без остановки и перезагрузки сервера (для некоторых операционных систем);
-  \item Включение, выключение, установка, переустановка ОС и приложений самостоятельно и удаленно;
-  \item Осуществление резервного копирование и сохранение состояний работающих виртуальных машин. 
+  \item создание арендуемых виртуальных серверов самостоятельно;
+  \item изменение конфигурации за несколько минут, часть операций даже без остановки и перезагрузки сервера (для некоторых операционных систем);
+  \item включение, выключение, установка, переустановка ОС и приложений самостоятельно и удаленно;
+  \item осуществление резервного копирование и сохранение состояний работающих виртуальных машин. 
 \end{itemize}
 
 \subsection{Назначение виртуальной инфраструктуры}
