Добавил некорректные события

--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -221,8 +221,10 @@
 
 События и действия, некорректные с точки зрения правил функционирования системы:
 \begin{itemize}
-  \item попытка заказа услуги пользователем без наличия финансовых средств на счету;
+  \item попытка заказа услуги без наличия финансовых средств на счету;
   \item неподтвержденные заказы услуг;
+  \item сбой в работе аппаратуры, в частности устройств хранения данных;
+  \item сбой сети в в пределах дата-центра или на магистрали;
   \item отсутствие своевременной работы технической поддержки;
   \item ошибки и уязвимости в используемых программных платформах.
 \end{itemize}
@@ -230,7 +232,6 @@
 Кроме того, необходимо вести контроль успешности и целостности проведения операций с компонентами системы, данными пользователей и корректно обрабатывать исключения, возникновение которых возможно в процессе работы системы.
 
 Перечисленные принципы обладают высокой степенью общности.
-Для непосредственного применения исследователь должен наполнить их конкретным содержанием применительно к предмету исследования.
 Такая интерпретация может привести к обоснованному выводу о незначимости какого-либо принципа.
 Однако знание и учет принципов позволяют лучше увидеть существенные стороны решаемой проблемы, учесть весь комплекс взаимосвязей, обеспечить системную интеграцию.
 
