Новые бланки заданий

--- a/main.tex
+++ b/main.tex
@@ -8,9 +8,8 @@
 %%% Начало документа
 \begin{document}
 
-%\includepdf{pz} % Пояснительная записка
-%\includepdf[pages={1,2}]{zadanie} % Задание на диплом
-% ПЗ и задание пока не утверждено до конца
+\includepdf{pz} % Пояснительная записка
+\includepdf[pages={1,2}]{task} % Задание на диплом
 
 \tableofcontents % Содержание 
 \clearpage
