Добавил шаблоны остальных разделов

--- a/main.tex
+++ b/main.tex
@@ -20,11 +20,11 @@
 \input{inc/2-literature} % Обзор современных методов и технологий серверной виртуализации
 \input{inc/3-analyze} % Системный анализ виртуальной инфраструктуры
 \input{inc/4-description} % Описание виртуальной инфраструктуры
-%\input{inc/5-adminguide} % Руководство администратора
-%\input{inc/6-userguide} % Руководство пользователя
-%\input{inc/7-testing} % Результаты тестирования
-%\input{inc/8-lifesafety} % Безопасность жизнедеятельности
-%\input{inc/0-conclusion} % Заключение
+\input{inc/5-adminguide} % Руководство администратора
+\input{inc/6-userguide} % Руководство пользователя
+\input{inc/7-testing} % Результаты тестирования
+\input{inc/8-lifesafety} % Безопасность жизнедеятельности
+\input{inc/0-conclusion} % Заключение
 \input{inc/0-bibliography} % Библиографический список
 
 % Приложения
